div duplication error fix
Fixed a case in which pressing a button would spawn 69 extra divs.

Also changed some colouring of scrollbar when hovering over it.

--- a/style.css
+++ b/style.css
@@ -216,6 +216,11 @@ a.article:hover {
 
 }
 
+#mdcontent p, #mdcontent li {
+    font-size: 0.9em;
+
+}
+
 hr {
     border-color:#BBBBCC;
 }
